// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numberInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div>
          <div
            class="uv_1p4qkknk uv_1p4qkknl uv_1p4qkkno"
            data-controls="true"
            data-disabled="false"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1p4qkkn0 uv_mxir930 uv_mxir93d uv_mxir932d uv_mxir9361"
              data-size="large"
            >
              <button
                aria-label="minus"
                class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mg uv_1x0t66mj uv_1x0t66m19"
                tabindex="-1"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    MinusIcon
                  </title>
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1p4qkkn3 uv_78oem50 uv_78oem5d uv_78oem561"
              style="--uv_ivy5ld0: 1fr auto; --uv_ivy5ld1: 1fr auto; --uv_ivy5ld2: 1fr auto; --uv_ivy5ld3: 1fr auto; --uv_ivy5ld4: 1fr auto; --uv_ivy5ld5: 1fr auto;"
            >
              <input
                class="uv_1p4qkknc uv_1p4qkkne uv_1p4qkkng"
                id="_r_0_"
                inputmode="decimal"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1p4qkkn0 uv_mxir930 uv_mxir93d uv_mxir932d uv_mxir9361"
              data-size="large"
            >
              <button
                aria-label="plus"
                class="uv_1x0t66m0 uv_1x0t66m1 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mg uv_1x0t66mj uv_1x0t66m19"
                tabindex="-1"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    PlusIcon
                  </title>
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`numberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_mxir930 uv_mxir932d uv_mxir935j"
      >
        <div>
          <div
            class="uv_1p4qkknk uv_1p4qkknl uv_1p4qkknp"
            data-controls="true"
            data-disabled="true"
            data-error="false"
            data-size="large"
            data-success="false"
            data-unit="false"
          >
            <div
              class="uv_1p4qkkn0 uv_mxir930 uv_mxir93d uv_mxir932d uv_mxir9361"
              data-size="large"
            >
              <button
                aria-label="minus"
                class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mg uv_1x0t66mj uv_1x0t66m19"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    MinusIcon
                  </title>
                  <path
                    d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="uv_1p4qkkn3 uv_78oem50 uv_78oem5d uv_78oem561"
              style="--uv_ivy5ld0: 1fr auto; --uv_ivy5ld1: 1fr auto; --uv_ivy5ld2: 1fr auto; --uv_ivy5ld3: 1fr auto; --uv_ivy5ld4: 1fr auto; --uv_ivy5ld5: 1fr auto;"
            >
              <input
                aria-label="Number Input"
                class="uv_1p4qkknc uv_1p4qkkne uv_1p4qkkng"
                disabled=""
                id="_r_8_"
                inputmode="decimal"
                max="9007199254740991"
                min="0"
                name="test"
                placeholder=""
                type="number"
              />
            </div>
            <div
              class="uv_1p4qkkn0 uv_mxir930 uv_mxir93d uv_mxir932d uv_mxir9361"
              data-size="large"
            >
              <button
                aria-label="plus"
                class="uv_1x0t66m0 uv_1x0t66m2 uv_1x0t66m3 uv_1x0t66m8 uv_1x0t66mg uv_1x0t66mj uv_1x0t66m19"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <svg
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <title>
                    PlusIcon
                  </title>
                  <path
                    d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
